# fin_analysis

./: .env.sample  .gitignore  LICENSE  README.md  check_progress.py  main.py  pyproject.toml  reset_db.py  step1_603080.json
analysis_llm/: README.md  __init__.py  agents.py  config.py  main.py  merger.py  models.py  prompts.py  tools.py  utils.py  workflow.py
data_infra/: check_load_progress.py  db.py  main.py  reset_db.py  stock_code.py  utils.py
docs/: 1.数据加载需求.md  bottom_reversal_strategy_design.md  common_commands.md  data_cleaning_rules.md  data_cleaning_rules_v2.md  data_loading_design_1min_qfq.md  database_tuning_recommendations.md  flat_pan_stock_screening_design.md  flatbottom_pipeline_restructure_plan.md  flatbottom_stock_scanner_design.md  monthly_kline_aggregation_design.md  monthly_kline_visualization_design.md  postgresql.conf
flatbottom_pipeline/: run_pipeline.py
load_data/: aggregate.py  check_load_progress.py  compress_manual.py  config.py  loader.py  reset_db.py
output/: 600482_akshare_data.json  600482_final_report.json  600482_technical_analysis.json  600482_web_research.json  600489_akshare_data.json  600489_final_report.json  600489_technical_analysis.json  600489_web_research.json  600519.SH_web_research.json  600519_akshare_data.json  600519_final_report.json  600519_technical_analysis.json  600519_web_research.json  600583_akshare_data.json  600583_final_report.json  600583_technical_analysis.json  600583_web_research.json  601069_akshare_data.json  601069_final_report.json  601069_technical_analysis.json  601069_web_research.json  (+10 more)
(+198 files in other folders)
